# Notes_Generator_From_Youtube_Video_Link

./: pyproject.toml  requirements.txt
shahmir_notes_generator/: main.py
